# packages/taskManager-app/server/api/controllers/examples/router.ts
@@ -6,8 +6,8 @@ export default express.Router()
     .post('/participant/register', controller.participant_register)
     .post('/participant/changeIdentity', controller.participant_changeIdentity)
 
-    .post('/task/tasks/', controller.task_create)
     .get('/task/tasks/:id', controller.task_get)
+    .post('/task/create', controller.task_create)
     .post('/task/modify', controller.task_modify)
     .post('/task/assign', controller.task_assign)
     .post('/task/passToReview', controller.task_passToReview)
